fix flexbox gap

--- a/src/css/gap.css
+++ b/src/css/gap.css
@@ -3,7 +3,7 @@
 
 .flex,
 .display-flex {
-	--gap: 0;
+	--gap: 0em;
   gap: var(--gap);
 }
 
@@ -12,14 +12,14 @@
 
 .grid,
 .display-grid {
-  --gap: 0;
+  --gap: 0em;
   grid-gap: var(--gap);
 }
 
 /* modifiers, applies to flex and grid */
 /* ----- ----- ----- ----- ----- */
 
-.gap-0 { --gap: 0; }
+.gap-0 { --gap: 0em; }
 .gap-1 { --gap: 1em; }
 .gap-1\.5 { --gap: 1.5em; }
 .gap-2 { --gap: 2em; }
@@ -28,7 +28,7 @@
 .gap-5 { --gap: 5em; }
 
 @media (--breakpoint-sm) {
-  .gap-0-sm { --gap: 0; }
+  .gap-0-sm { --gap: 0em; }
   .gap-1-sm { --gap: 1em; }
   .gap-1\.5-sm { --gap: 1.5em; }
   .gap-2-sm { --gap: 2em; }
@@ -37,7 +37,7 @@
   .gap-5-sm { --gap: 5em; }
 }
 @media (--breakpoint-md) {
-  .gap-0-md { --gap: 0; }
+  .gap-0-md { --gap: 0em; }
   .gap-1-md { --gap: 1em; }
   .gap-1\.5-md { --gap: 1.5em; }
   .gap-2-md { --gap: 2em; }
@@ -46,7 +46,7 @@
   .gap-5-md { --gap: 5em; }
 }
 @media (--breakpoint-lg) {
-  .gap-0-lg { --gap: 0; }
+  .gap-0-lg { --gap: 0em; }
   .gap-1-lg { --gap: 1em; }
   .gap-1\.5-lg { --gap: 1.5em; }
   .gap-2-lg { --gap: 2em; }
